Fix color contrast accesibilty to .ms-wrap-open

--- a/scss/core/generals/general.scss
+++ b/scss/core/generals/general.scss
@@ -1644,7 +1644,7 @@ img{
 		font-size: 12px;
 		text-transform: uppercase;
 		font-weight: 700;
-		background-color: #80be58;
+		background-color: #008000;
 		color: #FFF;
 		position: absolute;
 		top: 15px;
